MDEV-217 - Assertion `thd->stmt_arena != thd->progress.arena' failed in thd_progress_init on OPTIMIZE two tables when replaced by recreate

call thd_progress_end() in the copy_data_between_tables(), to match its
thd_progress_init().